--- a/kubernetes/web-service.yaml
+++ b/kubernetes/web-service.yaml
@@ -12,6 +12,6 @@ spec:
     port: 80
     targetPort: 80
     nodePort: 30005
-  #type: NodePort
-  type: LoadBalancer
+  type: NodePort
+  #type: LoadBalancer
 
