--- a/.github/workflows/dockerCICD.yml
+++ b/.github/workflows/dockerCICD.yml
@@ -6,7 +6,7 @@ on:
       - dev
 
 jobs:
-  Build-Test-Pushed:
+  Application-Build-Test-Pushed:
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.set_version.outputs.VERSION }}
@@ -56,8 +56,8 @@ jobs:
       - name: Run Migrations
         run: docker compose exec app php artisan migrate --force
 
-      # - name: Run Tests
-      #   run: docker compose exec app php artisan test
+      - name: Run Tests
+        run: docker compose exec app php artisan test
 
       - name: Stop and Remove Containers
         run: docker compose down
