--- a/kubernetes/db.yaml
+++ b/kubernetes/db.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: mysql
-        image: atugroup1/mysqldb:20250301171801
+        image: ye1234/multidrdb:20250714154642
         env:
         - name: MYSQL_ROOT_PASSWORD
           value: "HelloDublin"
