--- a/kubernetes/phpmyadmin.yaml
+++ b/kubernetes/phpmyadmin.yaml
@@ -18,7 +18,7 @@ spec:
         app: phpmyadmin
     spec:
       containers:
-      - image: atugroup1/phpmyadmin:20250301171801
+      - image: ye1234/multidrphpmyadmin:20250714154642
         name: phpmyadmin
         env:
         - name: PMA_HOST
