--- a/.github/workflows/dockerCICD.yml
+++ b/.github/workflows/dockerCICD.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Create Laravel .env file
         run: |
           echo "APP_ENV=\"${{ secrets.APP_ENV }}\"" >> .env
-          echo "APP_KEY=\"${{ secrets.APP_KEY }}\"" >> .env
+          echo "APP_KEY=" >> .env
           echo "DB_CONNECTION=\"${{ secrets.DB_CONNECTION }}\"" >> .env
           echo "DB_HOST=\"${{ secrets.DB_HOST }}\"" >> .env
           echo "DB_PORT=\"${{ secrets.DB_PORT }}\"" >> .env
